Fix audit vulnerabilities

--- a/package.json
+++ b/package.json
@@ -2841,6 +2841,7 @@
         "babel-polyfill": "^6.26.0",
         "bootstrap": "^4.3.1",
         "bootstrap-less": "^3.3.8",
+        "braces": "^3.0.2",
         "brfs": "^2.0.2",
         "canvas": "^2.6.0",
         "chai": "^4.1.2",
